css/resume.css
.pdf {
    margin:0 auto;
    text-align:center;

}

body {
    margin: 0;
    padding: 0;
    overflow-y:auto;
    overflow-x:hidden;
}

.meet-the-team {
    text-align: center;
    padding-top: 30px;
    font-size: 32px;
}
.team-member {
    display: inline-block;
    text-align: center;
    border:4px solid black;
    font-size: 32px;
    font-weight: bold;
    margin: 10px 0;
}
.team-member img {
    width: 400px;
    height: auto;
}
.team-member .description {
    font-size:16px;
    font-weight: normal;
}

/* description of employees */
.description{
    width:400px;
}

/* black divider line */
.divider {
    height: 5px;
    background-color: black;
    margin: 20px 0;
    padding-left:30px;
    padding-right:30px;
}

/* Endind message */
.paragraph{
    font-size:16px;
    text-align:center;
    padding:20px;
}
/* h3 is the Find us and Business hours, ect
   P is the info for the corresponding things */
h3{
    padding-left:40px;
}
p {
    padding: 0;
}

